Add support for Java 16+ without --illegal-access=permit